# symShellLight

./: .gitignore  CMakeLists.txt  Doxyfile  Doxygen_undocumented.txt  README.md  _check.sh  _cleanCmake.sh  _makeDocs.sh  _sig_msg.h  asserted.h  check.sh  clean_list.txt  optParam.hpp  pull_all.sh  random.h  screen.ini  sshmenuf.h  sshutils.hpp  symshell.h  wb_clone.hpp  wb_cpucl.hpp  wb_ptr.hpp  wb_rand.hpp  wieloboki.hpp
.github/workflows/: cmake-multi-platform.yml
EXAMPLES/: CAGas.cpp  CAGas.ori.cpp  Linktest.cpp  Testmous.cpp  Testpale.cpp  Testpoly.cpp  Testrand.cpp  Testsyms.cpp  Testsysh.cpp  Turmit.cpp
INCL/: _sig_msg.h  symshell.h  wb_limits.hpp
SVG/: errorent.c  symshsvg.cpp
TESTS/: CAGas.cpp  Linktest.cpp  Testmous.cpp  Testpale.cpp  Testpoly.cpp  Testrand.cpp  Testsyms.cpp  Testsysh.cpp  Turmit.cpp
TESTS/RawTests/native/: native.cpp
UTILS/: error_enter_before_clean.c  sshdefs.c  sshmenufdummy.c  sshutils.cpp  strtorgb.cpp  wb_pchar.cpp  wb_rand.cpp  wb_randg.c  wieloboki.cpp
WIN/: errorent.c  resource.h  sshmenuf.h  sshmenufwin.c  symshmsc.rc  symshwin.c  symshwin.h
X11/: errorent.c  icon.h  symshx11.c  wbx11ico.c
doxDocs/def/: doxygen.def
